# pcb

./: .env  .env.example  .env_kiosk  .env_pole_n_ed  .env_smart_pole  .gitignore  README.md  build_drag_blocker.bat  build_exe.bat  build_exe.sh  build_pcb_connection_check.bat  build_watchdog.bat  default.env  drag_blocker.py  drag_blocker.spec  gui_main.py  kiosk_gui.spec  main.py  main_osw.py  pcb_connection_check.py  pcb_connection_check.spec  pyproject.toml  test_null_modem.py  watchdog_gui.py  watchdog_gui.spec
KIOSK_RES/: css2  index-B3UIzghL.js  index-DRCKmYMv.css  index.html  ol-vendor-Ckne5Jf3.js
SMART_POLE_RES/: index-3gtM9ni-.js  index-_KDcQn9j.css  index.html  ol-vendor-BYqn2az2.js
kiosk_module/: __init__.py  _paths.py  autostart.py  background_browser.py  config.py  device_controller.py  device_display.py  device_websocket.py  env_utils.py  fake_serial_manager.py  input_activity.py  kiosk_background.py  kiosk_events.py  kiosk_runner.py  kiosk_ws.py  protocol.py  serial_manager.py  status_monitor.py  system_logging.py  test_input_ipc.py  volume_serial_controller.py  webview_app.py  webview_protocols.py  webview_services.py  ws_bridge.py
tests/: __init__.py  test_background_browser.py  test_device_display_pole_n_ed.py  test_device_display_urls.py  test_device_websocket_commands.py  test_device_websocket_urls.py  test_env_kiosk_flow.py  test_kiosk_background.py  test_kiosk_events_left_button_door.py  test_kiosk_events_person_detected.py  test_kiosk_events_vacancy_idle_close.py  test_meet_on_button.py  test_person_detected_scenario_mock.py  test_protocol.py  (+3 more)
(+30 files in other folders)
